Small addition to our page content.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <script src="main.js"></script>
 </head>
 <body>
-    <h1>Hello my friend</h1>
+    <h1>Hello my friend, lets go programming </h1>
 </body>
 </html> 
